--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,8 @@
       href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
     />
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="./scripts/script.js"></script>
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -34,6 +36,7 @@
       href="./images/micro_temp.png"
       type="image/x-icon"
     />
+    <script src="https://js.stripe.com/v3/"></script>
     <title>EarthChip</title>
   </head>
 
